--- a/.github/workflows/lomap_0.yml
+++ b/.github/workflows/lomap_0.yml
@@ -1,4 +1,4 @@
-name: CI for ASW2223
+name: CI for LOMAP_0
 
 on:
   release:
@@ -62,7 +62,7 @@ jobs:
       env:
         API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
       with:
-          name: pglez82/asw2223_0/webapp
+          name: arquisoft/lomap_0/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
@@ -77,25 +77,25 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-          name: pglez82/asw2223_0/restapi
+          name: arquisoft/lomap_0/restapi
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
-  deploy:
-    name: Deploy over SSH
-    runs-on: ubuntu-latest
-    needs: [docker-push-restapi,docker-push-webapp]
-    steps:
-    - name: Deploy over SSH
-      uses: fifsky/ssh-action@master
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        user: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_KEY }}
-        command: |
-          wget https://raw.githubusercontent.com/pglez82/asw2223_0/master/docker-compose-deploy.yml -O docker-compose.yml
-          docker-compose stop
-          docker-compose rm -f
-          docker-compose pull   
-          docker-compose up -d
+  # deploy:
+  #   name: Deploy over SSH
+  #   runs-on: ubuntu-latest
+  #   needs: [docker-push-restapi,docker-push-webapp]
+  #   steps:
+  #   - name: Deploy over SSH
+  #     uses: fifsky/ssh-action@master
+  #     with:
+  #       host: ${{ secrets.DEPLOY_HOST }}
+  #       user: ${{ secrets.DEPLOY_USER }}
+  #       key: ${{ secrets.DEPLOY_KEY }}
+  #       command: |
+  #         wget https://raw.githubusercontent.com/arquisoft/lomap_0/master/docker-compose-deploy.yml -O docker-compose.yml
+  #         docker-compose stop
+  #         docker-compose rm -f
+  #         docker-compose pull   
+  #         docker-compose up -d
