--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.organization=pglez82
+sonar.organization=arquisoft
 sonar.host.url=https://sonarcloud.io
-sonar.projectKey=pglez82_asw2223_0
+sonar.projectKey=Arquisoft_lomap_0
 
 sonar.language=ts
-sonar.projectName=asw2223_0
+sonar.projectName=lomap_0
 sonar.projectVersion=1.0.4
 
 sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
