--- a/.github/workflows/lomap_0.yml
+++ b/.github/workflows/lomap_0.yml
@@ -1,6 +1,10 @@
 name: CI for LOMAP_0
 
 on:
+  pull_request:
+    branches: ['**']
+  push:
+    branches: ['**']
   release:
     types: [published]
 
