--- a/.github/workflows/lomap_0.yml
+++ b/.github/workflows/lomap_0.yml
@@ -1,10 +1,6 @@
-name: CI for LOMAP_0
+name: release
 
 on:
-  pull_request:
-    branches: ['**']
-  push:
-    branches: ['**']
   release:
     types: [published]
 
