--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,17 @@ on:
     branches: ['**']
 
 jobs:
-  unit-test-root:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - run: npm ci
-    - run: npm run test --workspaces --coverage
+    - run: npm --prefix webapp ci
+    - run: npm --prefix restapi ci
+    - run: npm --prefix webapp test --coverage --watchAll
+    - run: npm --prefix restapi test --coverage --watchAll
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
       env:
